--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/Ninja-Developers/Quizzer#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.27"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
