--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
   },
   "homepage": "https://github.com/Ninja-Developers/Quizzer#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.27"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.27",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
